--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/mosaic.css">
 </head>
 <body>
-    <div class="sidebar">
+    <div class="portfolio-small">
         <div class="logo">Awesome<span>Portfolio</span></div>
         <nav>
           <a href="../index.html" class="nav-item">Home</a>
@@ -18,8 +18,9 @@
           <a href="" class="nav-item">Contact</a>
         </nav>
       </div>
+     
       
-      <div class="main-content">
+      <div class="portfolio-item-medium">
         <div class="portfolio">
           <div class="portfolio-item medium">one</div>
           <div class="portfolio-item large">two</div>
